Bug 390589, capture not being released in some cases when popup is closed, fixes some focus issues, r+sr=bz,a=dbaron